# bits

./: .gitignore  LICENSE  README.md  add  bitch.cabal  bitch.hs  cat  cateof  hello  pp.hs  sub
cc/: Makefile  shifty.cc
examples/: LICENSE  add  brainfuck  brainfuck.pp  cat  quine  rev  rot13  rot13-lut  rot13-lut.pp  rot13.pp
hs/: README.md  bit-h.cabal  bit-h.hs  bit-pp.hs  bitch.cabal  bitch.hs  bitchpp.hs
