cabal-version:       2.0

name:                bit-h
version:             0.0
synopsis:            bit** interpreter
description:
    This is a reimplementation of https://github.com/Helen0903/bitch
    in Haskell, with the following differences:
    .
    - use big integers
    - additional operation `%` dumps the current state and the next instruction
license:             MIT
license-file:        LICENSE
author:              Bertram Felgenhauer
maintainer:          int-e@gmx.de
category:            Language
build-type:          Simple
extra-source-files:
    README.md
    examples/LICENSE
    examples/hello
    examples/cat
    examples/rot13.pp
    examples/rot13
    examples/rot13-lut.pp
    examples/rot13-lut
    examples/add
    examples/sub
    examples/brainfuck.pp
    examples/brainfuck

source-repository head
    type:               git
    location:           https://github.com/int-e/bits

executable bit-h
    main-is:            bit-h.hs
    build-depends:
        base >= 4 && < 5
    default-language:    Haskell2010

executable bit-pp
    main-is:            bit-pp.hs
    build-depends:
        parsec >= 3.1 && < 3.2,
        containers >= 0.6 && < 0.7,
        base >= 4 && < 5
    default-language:    Haskell2010
